--- a/index.html
+++ b/index.html
@@ -16,8 +16,37 @@
 
     <body>
         <div id="task1">
-
-        </div>
+            <select class="select1 form-control">
+                <option class="country" value="usa">USA</option>
+                <option class="country" value="germany">Germany</option>
+                <option class="country" value="india">India</option>
+            </select>
+            <select class="select2 form-control">
+                <option class="city" value="usa">New York</option>
+                <option class="city" value="usa">Los Angeles</option>
+                <option class="city" value="usa">Chicago</option>
+                <option class="city" value="usa">Houston</option>
+                <option class="city" value="usa">Phoenix</option>
+                <option class="city" value="germany">Berlin</option>
+                <option class="city" value="germany">Hamburg</option>
+                <option class="city" value="germany">Munich</option>
+                <option class="city" value="germany">Cologne</option>
+                <option class="city" value="germany">Stuttgard</option>
+                <option class="city" value="india">Kolkata</option>
+                <option class="city" value="india">Chennai</option>
+                <option class="city" value="india">Bangalore</option>
+                <option class="city" value="india">Hyderabad</option>
+                <option class="city" value="india">Ahmedabad</option>
+            </select>
+            <!--<select name="country" id="country">
+                    <option value="aus">Австралия</option>
+                    <option value="jap">Япония</option>
+                    <option value="sar">ЮАР</option>
+                </select>
+                
+                <select name="cities" id="cities"></select>
+                <p></p>-->
+            </div>
 
 
 
