--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
         <link rel="stylesheet" type="text/css" href="styles.css">
 
     </head>
 
     <body>
         <div id="task1">
-            <select class="select1 form-control">
-            </select>
-            <select class="select2 form-control">
-            </select>
-            </div>
-            
+            <h2>Countries and cities</h2>
+            <select class="select1 form-control"></select>
+            <select class="select2 form-control"></select>
+        </div>
+        <hr>
         <div id="task2">
-
+            <h2>Check your birthday</h2>
+            <select class = "form-control" id="year"></select>
+            <select class = "form-control" id="month"></select>
+            <select class = "form-control" id="day"></select>
+        </div>
+        <hr>
 
         <hr id="footer">
 
