--- a/index.html
+++ b/index.html
@@ -21,12 +21,22 @@
         </div>
         <hr>
         <div id="task2">
-            <h2>Check your birthday</h2>
+            <h2>Calendar</h2>
             <select class = "form-control" id="year"></select>
             <select class = "form-control" id="month"></select>
             <select class = "form-control" id="day"></select>
         </div>
         <hr>
+        <div id="task3">
+            <h2>Currency exchange</h2>
+            <select class="val1 form-control"></select>
+            <select class="val2 form-control"></select>
+            <br>
+            <h5>Enter value:</h5>
+            <input type="text" class="input1 form-control">
+            <button class="btn btn1">Count</button>
+            <div id="result"></div>
+        </div>
 
         <hr id="footer">
 
