--- a/index.html
+++ b/index.html
@@ -37,6 +37,22 @@
             <button class="btn btn1">Count</button>
             <div id="result"></div>
         </div>
+        <hr>
+        <div class="row" id="task4">
+            <h2>Draw a grid</h2>
+            <div class="col col-md-6">
+                <h6>Enter a number of rows</h6>
+                <input type="number" class="input-row form-control">
+                <h6>Enter a number of columns</h6>
+                <input type="number" class="input-col form-control">
+                <button class="btn btn2">Draw</button>
+            </div>
+            <div class="col col-md-6">
+                <table id="table"></table>
+            </div>
+        </div>
+        <hr>
+        
 
         <hr id="footer">
 
