--- a/index.html
+++ b/index.html
@@ -52,7 +52,20 @@
             </div>
         </div>
         <hr>
-        
+        <div id="task5">
+            <h2>Sortuj rosnąco</h2>
+            <ul id="list">
+                <li class="number">3</li>
+                <li class="number">-53</li>
+                <li class="number">16</li>
+                <li class="number">0</li>
+                <li class="number">11</li>
+                <li class="number">205</li>
+                <li class="number">21</li>
+            </ul>
+
+            <button class="btn btn3">Sortuj rosnąco</button>
+        </div>
 
         <hr id="footer">
 
