--- a/index.html
+++ b/index.html
@@ -66,7 +66,16 @@
 
             <button class="btn btn3">Sortuj rosnąco</button>
         </div>
+        <hr>
+        <div id="task6">
+            <h2>Active link</h2>
+            <a class="link" href="https://www.wikipedia.org/" target="_blank">Wikipedia</a><br>
+            <a class="link" href="https://www.w3schools.com/" target="_blank">w3schools</a><br>
+            <a class="link" href="https://developer.mozilla.org" target="_blank">MDN web docs</a><br>
+            <p class="link-name"></p>
+        </div>
 
+        
         <hr id="footer">
 
         <script src="script.js"></script>
